<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">KotlinApp-Profile-07</string>

    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_website">Website</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_location">Location</string>
    <string name="hint_enable_location">Enable location</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>

    <string name="main_show_map">See on the map</string>
    <string name="main_profile">Profile</string>

    <string name="btn_profile_image">Profile Image</string>

    <string name="edit_main_title">Jorge Ruiz Cabrera Profile</string>
    <string name="edit_title">Edit profile</string>

    <string name="key_name">k_name</string>
    <string name="key_email">k_email</string>
    <string name="key_website">k_website</string>
    <string name="key_phone">k_phone</string>
    <string name="key_latitude">k_lat</string>
    <string name="key_longitude">k_long</string>
    <string name="key_image">k_image</string>

    <string name="profile_error_no_resolve">No compatible app found</string>
    <string name="settings_tittle">Settings</string>
    <string name="preferences_touch_title">Touch</string>
    <string name="preferences_enable_clicks">Enable clicks</string>
    <string name="preferences_key_enable_clicks">pref_enable_clicks</string>
    <string name="preferences_data_title">Data</string>
    <string name="preferences_delete_data">Delete user data</string>
    <string name="preferences_key_delete_data">pref_delete_data</string>
    <string name="preferences_restore_data">Restore Data and Settings</string>
    <string name="preferences_key_restore_data">pref_restore_data</string>
    <string name="preferences_ui_title">Interface</string>
    <string name="preferences_restore_setting">Restore Settings</string>
    <string name="preferences_key_restore_setting">pref_restore_settings</string>

    <string name="preferences_img_size_small">Small</string>
    <string name="preferences_img_size_medium">Medium</string>
    <string name="preferences_img_size_large">Large</string>
    <string name="preferences_key_img_size_small">pref_small</string>
    <string name="preferences_key_img_size_medium">pref_medium</string>
    <string name="preferences_key_img_size_large">pref_large</string>

    <string name="preferences_ui_img_size">Image size</string>
    <string name="preferences_key_ui_img_size">pref_ui_img_size</string>

</resources>